--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cheerio": "1.0.0-rc.2",
     "express": "4.15.3",
     "form-data": "2.2.0",
+    "isomorphic-fetch": "^2.2.1",
     "node-fetch": "1.7.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
