--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./server.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "cheerio": "1.0.0-rc.2",
     "express": "4.15.3",
     "form-data": "2.2.0",
